[project]
name = "DjangoStarter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DealiAxy", email = "dealiaxy@gmail.com"},
]
dependencies = [
    "django[argon2]>=5.0.14",
    "django-ninja>=1.4.1",
    "django-multi-captcha-admin>=2.0.0",
    "django-simple-captcha>=0.6.2",
    "django-cors-headers>=4.7.0",
    "django-ratelimit>=4.1.0",
    "orjson>=3.10.18",
    "pyjwt>=2.10.1",
    "wechatpy>=1.8.18",
    "django-redis>=5.4.0",
    "pycryptodome>=3.22.0",
    "tblib>=3.1.0",
    "jinja2>=3.1.6",
    "faker>=25.9.2",
    "django-split-settings>=1.3.2",
    "daphne>=4.1.2",
    "prometheus-client>=0.21.1",
    "requests>=2.32.3",
    "redis>=6.1.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "django-simple-history>=3.10.1",
    "django-jazzmin>=3.0.1",
    "granian>=2.5.6",
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "anyio>=4.11.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "django-debug-toolbar>=4.3.0",
]

[tool.pdm.scripts]
# 使用 Granian 以 ASGI 方式启动 Django（默认端口 8000）
granian-asgi = "granian --interface asgi config.asgi:application --static-path-route /static --static-path-mount ./static-dist"

# 使用 Granian 以 WSGI 方式启动 Django（兼容传统中间件）
granian-wsgi = "granian --interface wsgi config.wsgi:application --static-path-route /static --static-path-mount ./static-dist"

# 使用 Granian 开启 HTTP/2（如果代理或客户端支持）
granian-http2 = "granian --interface asgi --http 2 config.asgi:application --static-path-route /static --static-path-mount ./static-dist"
